--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.2.1
   animated_text_kit: ^4.2.2
   flutter_launcher_icons: ^0.14.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
