--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_launcher_icons: ^0.14.1
   intl: ^0.19.0
+  material_symbols_icons: ^4.2785.1
 
 dev_dependencies:
   flutter_test:
