--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   intl: ^0.19.0
   material_symbols_icons: ^4.2785.1
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
