--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   intl: ^0.19.0
   material_symbols_icons: ^4.2785.1
   fl_chart: ^0.69.0
+  dotted_separator: ^1.0.6
+  dotted_line: ^3.2.2
+  flutter_custom_clippers: ^2.1.0
 
 dev_dependencies:
   flutter_test:
