--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dotted_separator: ^1.0.6
   dotted_line: ^3.2.2
   flutter_custom_clippers: ^2.1.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
