--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_custom_clippers: ^2.1.0
   flutter_svg: ^2.0.10+1
   provider: ^6.1.2
+  device_info_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
