--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   provider: ^6.1.2
   device_info_plus: ^11.0.0
+  web_socket_channel: ^3.0.1
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
