add items and minimal corrections

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   web_socket_channel: ^3.0.1
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
+  pdf: ^3.11.1
 
 dev_dependencies:
   flutter_test:
