--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
   pdf: ^3.11.1
+  syncfusion_flutter_charts: ^27.1.53
 
 dev_dependencies:
   flutter_test:
